更新命令说明

--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
   "scripts": {
     "clean": "rimraf dist",
     "build:dll": " webpack --config ./build_config/webpack.dll.config.js --progress --colors",
-    "build:webpack": "webpack --config ./build_config/webpack.dist.config.js --progress --colors",
-    "build": "npm run build:dll && npm run build:webpack",
+    "build:dist": "webpack --config ./build_config/webpack.dist.config.js --progress --colors",
+    "build": "npm run build:dll && npm run build:dist",
     "server": "node ./build_config/server.js -p 8080 -P dist",
-    "watch": "npm run build:dll && webpack --config ./build_config/webpack.dev.config.js --watch --progress",
     "start": "webpack-dev-server --config ./build_config/webpack.dev.config.js --progress --colors --hot --inline"
   },
   "author": "Chyrain",
