--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "src/index.jsx",
   "repository": "https://github.com/Chyrain/Webpack-Demo.git",
   "scripts": {
-    "clean": "rimraf dist",
+    "init": "npm install && gulp font:hyfont && npm run build:dll",
+    "start": "webpack-dev-server --config ./build_config/webpack.dev.config.js --progress --colors --hot --inline",
+    "build": "webpack --config ./build_config/webpack.dist.config.js --progress --colors",
     "build:dll": " webpack --config ./build_config/webpack.dll.config.js --progress --colors",
-    "build:dist": "webpack --config ./build_config/webpack.dist.config.js --progress --colors",
-    "build": "npm run build:dll && npm run build:dist",
+    "build:dist": "npm run build:dll && npm run build",
     "server": "node ./build_config/server.js -p 8080 -P dist",
-    "start": "webpack-dev-server --config ./build_config/webpack.dev.config.js --progress --colors --hot --inline"
+    "clean": "rimraf dist"
   },
   "author": "Chyrain",
   "license": "ISC",
