--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Chyrain",
   "license": "ISC",
   "dependencies": {
+    "antd": "^3.0.2",
     "prop-types": "^15.6.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
