增加单独模块构建命令npm run dev|dist app(模块名)

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "build:dll": " webpack --config ./build_config/webpack.dll.config.js --progress --colors",
     "release": "npm run build:dll && npm run build:dist",
     "server": "node ./build_config/server.js -p 8080 -P dist",
+    "dev": "webpack-dev-server --config ./build_config/webpack.dev.config.js --progress --colors --hot --inline --define",
+    "dist": "webpack --config ./build_config/webpack.dist.config.js --progress --colors --define",
     "clean": "rimraf dist"
   },
   "author": "Chyrain",
