--- a/.babelrc
+++ b/.babelrc
@@ -13,7 +13,8 @@
 	"plugins": [
 		"transform-decorators-legacy",
 		"transform-class-properties",
-		"transform-es2015-modules-commonjs"
+		"transform-es2015-modules-commonjs",
+		"transform-object-rest-spread"
 	],
 	"env": {
 		"production": {
