--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build:dist": "webpack --config ./build_config/webpack.dist.config.js --progress --colors",
     "build:dll": " webpack --config ./build_config/webpack.dll.config.js --progress --colors",
     "release": "npm run build:dll && npm run build:dist",
-    "server": "node ./build_config/server.js -p 8080 -P dist",
+    "server": "PORT=8080 node ./build_config/app.js",
     "dev": "webpack-dev-server --config ./build_config/webpack.dev.config.js --progress --colors --hot --inline --define",
     "dist": "webpack --config ./build_config/webpack.dist.config.js --progress --colors --define",
     "clean": "rimraf dist"
@@ -34,10 +34,12 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.10",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
+    "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
     "gulp": "^3.9.1",
