--- a/.babelrc
+++ b/.babelrc
@@ -14,7 +14,8 @@
 		"transform-decorators-legacy",
 		"transform-class-properties",
 		"transform-es2015-modules-commonjs",
-		"transform-object-rest-spread"
+		"transform-object-rest-spread",
+		["import", { "libraryName": "antd", "style": "css" }]
 	],
 	"env": {
 		"production": {
